--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <!-- Resizer button here -->
-    <div style="background-color: red">resizer to be made</div>
+    <div id="resizer">↕️</div>
     <!-- Result Section -->
     <div id="resultSection">
       <div id="resultContainer">
@@ -101,4 +101,42 @@
       <span>Made with💖,☕&🚰 by Ashutosh7i🚀</span>
     </div>
   </body>
+
+  <script>
+    const resizer = document.getElementById("resizer");
+    const editorsSection = document.getElementById("editorsSection");
+    const resultSection = document.getElementById("resultSection");
+
+    let startY, startHeightEditors, startHeightResult;
+
+    resizer.addEventListener("mousedown", (e) => {
+      startY = e.clientY;
+      startHeightEditors = parseInt(
+        getComputedStyle(editorsSection).getPropertyValue("height")
+      );
+      startHeightResult = parseInt(
+        getComputedStyle(resultSection).getPropertyValue("height")
+      );
+
+      document.addEventListener("mousemove", handleResize);
+      document.addEventListener("mouseup", stopResize);
+    });
+
+    function handleResize(e) {
+      const delta = e.clientY - startY;
+      const newHeightEditors = startHeightEditors + delta;
+      const newHeightResult = startHeightResult - delta;
+
+      // Limit the resizing to prevent going below 50% of editorsSection
+      if (newHeightEditors >= editorsSection.clientHeight * 0.5) {
+        editorsSection.style.height = newHeightEditors + "px";
+        resultSection.style.height = newHeightResult + "px";
+      }
+    }
+
+    function stopResize() {
+      document.removeEventListener("mousemove", handleResize);
+      document.removeEventListener("mouseup", stopResize);
+    }
+  </script>
 </html>
